# ETL-Ecommerce-produtos

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
data/: data.json  quotes.db
docs/: about.md  index.md
docs/dashboard/: index.html
docs/docs/: dashboard.md
reports/: Workshop Aberto.excalidraw  problema_de_negocio.md
reports/docs/: diagram_project.excalidraw  problema_de_negocio.md
search/: search_index.json
site/: 404.html  index.html
site/about/: index.html
site/search/: search_index.json
src/coleta/: settings.py
src/coleta/spiders/: mercadolivre.py
src/dashboard/: app.py
src/dashboard/.streamlit/: config.toml
src/transformacao/: main.py
