[tool.poetry]
name = "pipeline-etl-python-web-scraping-com-scrapy"
version = "0.1.0"
description = ""
authors = ["oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scrapy = "^2.11.2"
streamlit = "^1.34.0"
plotly = "^5.22.0"
streamlit-extras = "^0.4.2"
streamlit-navigation-bar = "^3.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.24"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.25.1"}
mkdocstrings-python = "^1.10.3"
mkdocs-macros-plugin = "^1.0.5"
pymdown-extensions = "^10.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
